只有当数据库字段可以为null时才加Option

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /.idea/
 /SlickCodeGenerator.iml
+/src/main/resources/jeecg/code-template/one/java/${bussiPackage}/${entityPackage}/entity/${entityName}1.scalai
