1:分离VO和Repository;2:生成Writes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /.idea/
 /SlickCodeGenerator.iml
 /src/main/resources/jeecg/code-template/one/java/${bussiPackage}/${entityPackage}/entity/${entityName}1.scalai
+/target/
